# UniMERNet

./: .gitignore  Session.vim  pyproject.toml  test.py
configs/val/: unimernet_base.yaml
scripts/: test.sh
unimernet/configs/models/: unimernet_base.yaml
unimernet/models/blip2_models/: Qformer.py
