[project]
name = "unimernet"
version = "0.2.3"
description = "UniMERNet: A Universal Network for Real-World Mathematical Expression Recognition"
authors = [
    {name = "Bin Wang", email = "ictwangbin@gmail.com"}
]
readme = "README.md"
license = {text = "Apache License 2.0"}
requires-python = ">=3.10"
keywords = ["MER", "latex", "markdown", "pdf"]
dependencies = [
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "omegaconf>=2.3.0,<3.0.0",
    "matplotlib>=3.8.4,<4.0.0",
    "iopath>=0.1.9,<0.2.0",
    "timm>=0.9.16,<0.10.0",
    "opencv-python>=4.6.0,<5.0.0",
    "transformers==4.42.4",
    "fairscale>=0.4.13,<0.5.0",
    "ftfy>=6.2.0,<7.0.0",
    "albumentations>=1.4.4,<2.0.0",
    "wand>=0.6.13,<0.7.0",
    "webdataset>=0.2.86,<0.3.0",
    "rapidfuzz>=3.8.1,<4.0.0",
    "termcolor>=2.4.0,<3.0.0",
    "pandas>=2.2.2,<3.0.0",
    "evaluate>=0.4.1,<0.5.0",
    "rich>=13.7.1,<14.0.0",
    "jupyterlab>=4.1.6,<5.0.0",
    "tabulate>=0.9.0,<0.10.0",
    "nltk>=3.8.1,<4.0.0",
    "streamlit>=1.33.0,<2.0.0",
    "pypdfium2>=4.29.0,<5.0.0",
    "pdf2image>=1.17.0,<2.0.0",
    "streamlit_drawable_canvas>=0.9.3,<0.10.0",
]

[project.optional-dependencies]
full = [
    "termcolor>=2.4.0,<3.0.0",
    "pandas>=2.2.2,<3.0.0",
    "rich>=13.7.1,<14.0.0",
    "jupyterlab>=4.1.6,<5.0.0",
    "tabulate>=0.9.0,<0.10.0",
    "nltk>=3.8.1,<4.0.0",
    "streamlit>=1.33.0,<2.0.0",
    "pypdfium2>=4.29.0,<5.0.0",
    "pdf2image>=1.17.0,<2.0.0",
    "streamlit_drawable_canvas>=0.9.3,<0.10.0",
]

[project.scripts]
unimernet = "demo:main"
unimernet_gui = "run_unimernet_app:run_app"
unimernet_eval = "test:main"

[project.urls]
Repository = "https://github.com/opendatalab/UniMERNet"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unimernet"]
